--- a/nodes/uos-config.html
+++ b/nodes/uos-config.html
@@ -187,8 +187,8 @@
 
     <dt>Client Name</dt>
     <dd>
-      A friendly identifier for this Node-RED instance. Used for connection logs.
-      <br><b>Example:</b> <code>nodered</code>
+      Name of this connection (e.g. <code>nodered</code>).<br>
+      This is <b>mandatory</b> and helps identify logs.
     </dd>
 
     <dt>Client ID</dt>
